<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInUserFragment">

    <!-- Wrap in Scroll View to handle Keyboard -->
    <ScrollView
        android:id="@+id/sign_in_user_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sign_in_user_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/sign_in_user_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_user_name"
                android:inputType="textCapWords"
                android:textSize="@dimen/edit_text_large" />

            <TextView
                android:id="@+id/sign_in_user_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_or_sign_up_start_voting" />

            <Button
                android:id="@+id/sign_in_user_button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />

            <!-- TODO: move to bottom -->
            <Button
                android:id="@+id/sign_in_user_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
