<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInGetStartedFragment">

    <LinearLayout
        android:id="@+id/sign_in_get_started_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_get_started_text_view_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_film_vote"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/sign_in_get_started_text_view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/an_open_source_app"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat" />

        <Button
            android:id="@+id/sign_in_get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started" />

    </LinearLayout>

</FrameLayout>
