<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/home_linear_layout_club_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/home_linear_layout_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_text_view_club_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club_name" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/text_view_space"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/home_text_view_club_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_linear_layout_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_text_view_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/text_view_space"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/home_text_view_user_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_linear_layout_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/home_text_view_vote_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/home_text_view_vote_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/home_text_view_vote_theater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/home_text_view_vote_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/home_text_view_vote_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_linear_layout_vote_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/home_text_view_vote_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_votes" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_linear_layout_version_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/home_linear_layout_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_text_view_version_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/text_view_space"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/home_text_view_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_linear_layout_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_text_view_build_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/text_view_space"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/home_text_view_build_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
